move to Java 25 for packaging